@@ -1,1 +1,1 @@
-eval(read("/tissot_manager/aroma.edify"));
+../../../../../root/tissot_manager/aroma.edify
